feat: implement post management features with Neo4j integration